<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainUI.detail.tvShow.DetailTvShowActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewContent"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/viewPoster"
                layout="@layout/item_list_movie"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline3"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="155dp" />

            <include
                android:id="@+id/viewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                layout="@layout/layout_detail_tv"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDescriptionTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                android:text="@string/description"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/viewPoster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                tools:text="@string/description"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tvHomePageTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_default"
                android:text="@string/home_page"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tvHomePage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                tools:text="http://spiderman.com"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvHomePageTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>