<resources>
    <string name="app_name">Film Explorer</string>

    <string name="movie">Movies</string>
    <string name="tvShow">Tv Shows</string>
    <string name="images">images</string>
    <string name="title">Title</string>
    <string name="status">Statues</string>
    <string name="date">Release Date</string>
    <string name="description">Description</string>
    <string name="episode_count">Episode Count</string>
    <string name="home_page">Home Page</string>
    <string name="home">Home</string>
    <string name="favorite">Favorit</string>
</resources>